# sabi-agent

./: .gitignore  AGENTS.md  README.md  ROADMAP.md
desktop/: index.html  package-lock.json  package.json  tsconfig.json
desktop/src/: main.ts  main.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: ARCHITECTURE.md  PORTING_NOTES.md  USER_MANUAL.md
rust-pi-agent/: Cargo.toml  README.md
rust-pi-agent/examples/: binary_search.py  binary_search.rs  fibonacci.py  fibonacci.rs
rust-pi-agent/src/: agent.rs  app.rs  diff.rs  events.rs  lib.rs  llm.rs  main.rs  messages.rs  session.rs  skills.rs  slash.rs
rust-pi-agent/src/tools/: edit.rs  find.rs  grep.rs  ls.rs  mod.rs  read.rs  write.rs
sabi-agent/: .env.example  Cargo.toml  README.md
sabi-agent/examples/: BinarySearch.java  binary_search.ts  fibonacci.rs
sabi-agent/src/: agent.rs  app.rs  approval.rs  config.rs  desktop.rs  diff.rs  events.rs  lib.rs  llm.rs  main.rs  messages.rs  onboarding.rs  session.rs  skills.rs  system_prompt.rs
sabi-agent/src/skills/: init.txt  review.txt
sabi-agent/src/tools/: bash.rs  find.rs  grep.rs  ls.rs  mod.rs  read.rs  search.rs  write.rs
