[package]
name = "sabi-agent"
version = "0.1.0"
edition = "2021"
description = "A beginner-friendly Rust coding agent harness"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
owo-colors = "4"
reqwest = { version = "0.12", features = ["json", "stream"] }
rustyline = "15"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
toml = "0.8"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v7", "serde"] }

[dev-dependencies]
tempfile = "3"
serial_test = "3"
