[package]
name = "sabi-desktop"
version = "0.1.0"
edition = "2021"
description = "Desktop frontend for Sabi Agent"
license = "MIT"

[lib]
name = "sabi_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
sabi-agent = { path = "../../sabi-agent" }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
